<resources>
    <string name="app_name">My Application</string>
    <string name="signup">SignUp</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here!</string>
    <string name="login_here">Login Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="LogIn_Here">Login_here!</string>
    <string name="log_in_here">Log In Here</string>
    <string name="Signup">Signup</string>
    <string name="todo">TODO</string>
    <string name="existing_user_login_here">Existing User... Login Here</string>
    <string name="log_out">Log Out</string>
    <string name="calendar">Calendar</string>
    <string name="symptoms_tracker">Symptoms Tracker 🔍</string>
    <string name="medication_tracker">Medication Tracker 💊</string>
    <string name="daily_reminders">Daily Reminders ⏰</string>
    <string name="profile">Profile 🙋‍♂️</string>
    <string name="premium_features">Premium Features</string>
    <string name="premium">Premium 🔒</string>
    <string name="s" />
    <string name="recommended_medications">Recommended Medications</string>
    <string name="activate_reminders">Activate Reminders</string>
    <string name="daily_medication_reminders">Daily Medication Reminders</string>
    <string name="_7_day_allergy_risk_forecast">7-Day Allergy Risk Forecast</string>
    <string name="weather_header">7-Day Allergy Risk Forecast</string>
    <string name="settings_title">Settings</string>
    <string name="save">Save</string>
    <string name="contact1_hint">Emergency Contact #1</string>
    <string name="contact2_hint">Emergency Contact #2</string>
    <string name="age_hint">Your age</string>
    <string name="gender_hint">Gender</string>
    <string name="call">Call</string>
    <string name="call_emergency">Call Emergency</string>
    <string name="settings">Settings</string>
    <string name="emergency">Emergency</string>
    <string name="weather_report">Weather Report🌤️</string>
</resources>