<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">


    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2CF65D"
        android:elevation="2dp"
        android:padding="8dp"
        android:text="@string/register_here"
        android:textColor="#607D8B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="117dp"
        android:layout_height="67dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#2CE65D"
        android:text="@string/log_in"
        android:textColor="#6D4C41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bluebackground"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/AllergyTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/allergylogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints,ImageContrastCheck,VisualLintBounds" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:background="#2CE65D"
        android:backgroundTint="#00FF15"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:padding="5dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/UsernameText"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:accessibilityLiveRegion="polite"
        android:background="#2CE65D"
        android:backgroundTint="#00FF15"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:padding="5dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327"
        tools:ignore="TextFields" />


</androidx.constraintlayout.widget.ConstraintLayout>